# binary

./: .gitignore  .gitmodules  .univ2-config.json  CLAUDE.md  Makefile  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  foundry.toml  package-lock.json  package.json  pnpm-lock.yaml
backend/: .dockerignore  .env.example  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  fly.toml
backend/src/: admin.rs  auth.rs  config.rs  contract.rs  db.rs  indexer.rs  main.rs  routes.rs  tempo_amm.rs  tempo_orderbook.rs  uniswap_v4.rs
backend/src/bindings/: deploy_multi_verse.rs  mod.rs  multi_verse.rs  multi_verse_test.rs  trusted_oracle.rs  verse.rs  verse_amm_test.rs  verse_test.rs
backend/tests/: README.md  integration_test.rs  unit_tests.rs
backend/tests/unit/: api_tests.rs  mod.rs  validation_tests.rs
contracts/: foundry.toml  remappings.txt
frontend/: AGENTS.md  Dockerfile  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  wrangler.toml
script/: CreateMarket.s.sol  DeployAll.s.sol  DeployAndSeedMarkets.s.sol  DeployBaseSepolia.s.sol  DeployMultiVerse.s.sol  DeployTempo.sh  OpenFOCILMarket.s.sol  OpenFOCILMarketAndSplit.s.sol  README.md  add-testnet-liquidity.ts  deploy-local.sh  deploy-tempo.ts  env-testnet.ts  env.ts  fund-address.ts  fund-and-deploy.ts  fund.ts  package.json  production-redeploy.ts  seed-production.ts  seed-testnet-liquidity.ts  setup-devnet.ts  test-local.ts  test-pair.ts  test-trade-flow.ts  tsconfig.json  update-deployments.ts
(+117 files in other folders)
