[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum interaction
alloy = { version = "1.0", features = ["full"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Hex encoding/decoding
hex = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = "0.4"
futures-util = "0.3"

# Authentication
bcrypt = "0.15"
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
